navbar section done

--- a/index.html
+++ b/index.html
@@ -5,8 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fintech | Landing Page</title>
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
+    <!-- navbar -->
+    <nav class="navbar">
+      <!-- navbar left -->
+      <div class="navbar-left">
+        <!-- navbar title -->
+        <h2 class="navbar-logo">Soudemy</h2>
+        <!-- navbar-link -->
+        <ul class="navbar-link">
+          <li>
+            <a href="#">Features</a>
+          </li>
+          <li>
+            <a href="#">How It Works</a>
+          </li>
+          <li>
+            <a href="#">Products</a>
+          </li>
+          <li>
+            <a href="#">Client Stories</a>
+          </li>
+        </ul>
+      </div>
+
+      <!-- navbar-cta -->
+      <div class="navbar-cta">
+        <!-- button sign in -->
+        <button type="button" class="button-sign-in">Sign in</button>
+        <!-- button get started -->
+        <button type="button" class="button-get-started">Get Started</button>
+      </div>
+
+      <!-- navbar open -->
+      <div class="navbar-open" id="btnOpenNav">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+      <!-- navbar close -->
+      <div class="navbar-close hide" id="btnCloseNav">
+        <i class="fa-solid fa-times"></i>
+      </div>
+    </nav>
+
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
