--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <!-- navbar-cta -->
       <div class="navbar-cta">
         <!-- button sign in -->
-        <button type="button" class="button-sign-in">Sign in</button>
+        <button type="button" class="button-secondary">Sign in</button>
         <!-- button get started -->
-        <button type="button" class="button-get-started">Get Started</button>
+        <button type="button" class="button-primary">Get Started</button>
       </div>
 
       <!-- navbar open -->
@@ -55,6 +55,31 @@
         <i class="fa-solid fa-times"></i>
       </div>
     </nav>
+
+    <!-- hero -->
+    <div class="hero">
+      <!-- hero left -->
+      <div class="hero-left">
+        <h2 class="text-heading">Soudemy can maximize your money flow.</h2>
+        <p class="text-description">
+          You no longer need to go home or go to the bank to do <br />this Only
+          through this platform , all financial activities <br />can completed.
+        </p>
+
+        <div class="hero-cta">
+          <button type="button" class="button-primary">Get Started</button>
+          <button type="button" class="button-secondary">Learn More</button>
+        </div>
+      </div>
+      <!-- hero right -->
+      <div class="hero-right">
+        <img
+          src="./assets/images/hero-image.svg"
+          alt="hero-image"
+          class="hero-image"
+        />
+      </div>
+    </div>
 
     <script src="./assets/js/index.js"></script>
   </body>
