add navbar collapse

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </div>
 
       <!-- navbar open -->
-      <div class="navbar-open" id="btnOpenNav">
-        <i class="fa-solid fa-bars"></i>
+      <div class="navbar-open">
+        <i class="fa-solid fa-bars" id="btnOpenNav"></i>
       </div>
       <!-- navbar close -->
       <div class="navbar-close hide" id="btnCloseNav">
