--- a/index.html
+++ b/index.html
@@ -81,6 +81,47 @@
       </div>
     </div>
 
+    <!-- feature -->
+    <div class="feature">
+      <h2 class="feature-title">
+        App features that help manage <br />
+        money more organized
+      </h2>
+
+      <!-- card -->
+      <div class="feature-grid">
+        <!-- card 1 -->
+        <div class="card">
+          <h2 class="card-title">Facilitate Financial Services</h2>
+          <p class="card-description">
+            Consequat curae neque amet auctor, sed fames sem tristique,nullam
+            nisi maecenas.
+          </p>
+          <img src="./assets/images/img-1.svg" alt="" class="card-image" />
+        </div>
+
+        <!-- card 2 -->
+        <div class="card">
+          <h2 class="card-title">Fintech as an Alternative Investment Tool</h2>
+          <p class="card-description">
+            Consequat curae neque amet auctor, sed fames sem tristique,nullam
+            nisi maecenas.
+          </p>
+          <img src="./assets/images/img-2.svg" alt="" class="card-image" />
+        </div>
+
+        <!-- card 3 -->
+        <div class="card">
+          <h2 class="card-title">Financial Transaction Become Easier</h2>
+          <p class="card-description">
+            Consequat curae neque amet auctor, sed fames sem tristique,nullam
+            nisi maecenas.
+          </p>
+          <img src="./assets/images/img-3.svg" alt="" class="card-image" />
+        </div>
+      </div>
+    </div>
+
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
