--- a/index.html
+++ b/index.html
@@ -122,6 +122,69 @@
       </div>
     </div>
 
+    <!-- footer -->
+    <div class="footer">
+      <!-- footer subscribe -->
+      <div class="footer-subscribe">
+        <h2 class="subscribe-title">
+          Subscribe to Our <br />
+          Newslater
+        </h2>
+        <form action="#" method="post" class="subscribe-form">
+          <input type="email" name="email" placeholder="Your Email Addres" />
+          <button type="submit" class="button-primary">Get Started</button>
+        </form>
+      </div>
+      <!-- footer link  -->
+      <div class="footer-navlink-grid">
+        <!-- group 1 -->
+        <div class="navlink-group">
+          <h3>Soudemy</h3>
+          <p>Platform help your money to be better</p>
+        </div>
+
+        <!-- group 2 -->
+        <ul class="navlink-group">
+          <h3>Features</h3>
+          <li><a href="#">Saving Goal</a></li>
+          <li><a href="#">Cash back reward</a></li>
+          <li><a href="#">Early payday</a></li>
+          <li><a href="#">Financial Freedom</a></li>
+        </ul>
+
+        <!-- group 3 -->
+        <ul class="navlink-group">
+          <h3>Support</h3>
+          <li><a href="#">Saving Goal</a></li>
+          <li><a href="#">Cash back reward</a></li>
+          <li><a href="#">Early payday</a></li>
+          <li><a href="#">Financial Freedom</a></li>
+        </ul>
+
+        <!-- group 4 -->
+        <ul class="navlink-group">
+          <h3>Company</h3>
+          <li><a href="#">Saving Goal</a></li>
+          <li><a href="#">Cash back reward</a></li>
+          <li><a href="#">Early payday</a></li>
+          <li><a href="#">Financial Freedom</a></li>
+        </ul>
+
+        <!-- group 5 -->
+        <ul class="navlink-group">
+          <h3>Resources</h3>
+          <li><a href="#">Saving Goal</a></li>
+          <li><a href="#">Cash back reward</a></li>
+          <li><a href="#">Early payday</a></li>
+          <li><a href="#">Financial Freedom</a></li>
+        </ul>
+      </div>
+      <!-- footer copyright -->
+      <p class="footer-copyright">
+        Copyright: @2023 Soudemy Team Design All Rights Reserved.
+      </p>
+    </div>
+
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
