--- a/index.html
+++ b/index.html
@@ -122,6 +122,65 @@
       </div>
     </div>
 
+    <!-- how it works -->
+    <div class="how-it-works">
+      <!-- works 1 -->
+      <div class="work">
+        <img src="./assets/images/works-1.svg" alt="work-1" />
+        <div class="work-text">
+          <h2 class="work-text-title">
+            The role of <br />Fintech in the payment system
+          </h2>
+          <p class="work-text-description">
+            FinTech is able to replace the role of formal <br />
+            financial institutions such as banks. In terms of <br />
+            the payment system.
+          </p>
+          <p class="work-text-additional">
+            <i class="fa-solid fa-circle-check"></i> Become a tool for payment,
+            settlement and clearing
+          </p>
+          <p class="work-text-additional">
+            <i class="fa-solid fa-circle-check"></i> Become a tool for payment,
+            settlement and clearing
+          </p>
+          <p class="work-text-additional">
+            <i class="fa-solid fa-circle-check"></i> Become a tool for payment,
+            settlement and clearing
+          </p>
+        </div>
+      </div>
+
+      <!-- works 2 -->
+      <div class="work">
+        <img src="./assets/images/works-2.svg" alt="work-1" />
+        <div class="work-text">
+          <h2 class="work-text-title">
+            Get in-depth <br />
+            insights on your <br />
+            cashflow
+          </h2>
+          <p class="work-text-description">
+            FinTech is able to replace the role of formal <br />
+            financial institutions such as banks. In terms of <br />
+            the payment system.
+          </p>
+          <p class="work-text-additional">
+            <i class="fa-solid fa-circle-check"></i> Become a tool for payment,
+            settlement and clearing
+          </p>
+          <p class="work-text-additional">
+            <i class="fa-solid fa-circle-check"></i> Become a tool for payment,
+            settlement and clearing
+          </p>
+          <p class="work-text-additional">
+            <i class="fa-solid fa-circle-check"></i> Become a tool for payment,
+            settlement and clearing
+          </p>
+        </div>
+      </div>
+    </div>
+
     <!-- footer -->
     <div class="footer">
       <!-- footer subscribe -->
