--- a/index.html
+++ b/index.html
@@ -181,6 +181,65 @@
       </div>
     </div>
 
+    <!-- product -->
+    <div class="product">
+      <!-- product title -->
+      <h2 class="product-title">
+        We`ve created a full <br />
+        suite of products
+      </h2>
+      <!-- product card -->
+      <div class="product-grid">
+        <!-- product 1 -->
+        <div class="product-card">
+          <!-- product image -->
+          <img
+            src="./assets/images/product-1.svg"
+            alt="product-1"
+            class="product-card-image"
+          />
+          <!-- product title -->
+          <h2 class="product-card-title">Payment Feature Ultimate</h2>
+          <!-- product description -->
+          <p class="product-card-description">
+            Arcu sed eu phasellus feugiat mattis, dolor iaculis turpis sit risus
+            ornare consequat quam, urna eleifend?
+          </p>
+        </div>
+        <!-- product 2 -->
+        <div class="product-card">
+          <!-- product image -->
+          <img
+            src="./assets/images/product-2.svg"
+            alt="product-2"
+            class="product-card-image"
+          />
+          <!-- product title -->
+          <h2 class="product-card-title">Finance Analytics</h2>
+          <!-- product description -->
+          <p class="product-card-description">
+            Arcu sed eu phasellus feugiat mattis, dolor iaculis turpis sit risus
+            ornare consequat quam, urna eleifend?
+          </p>
+        </div>
+        <!-- product 3 -->
+        <div class="product-card">
+          <!-- product image -->
+          <img
+            src="./assets/images/product-3.svg"
+            alt="product-3"
+            class="product-card-image"
+          />
+          <!-- product title -->
+          <h2 class="product-card-title">Intelligent Software</h2>
+          <!-- product description -->
+          <p class="product-card-description">
+            Arcu sed eu phasellus feugiat mattis, dolor iaculis turpis sit risus
+            ornare consequat quam, urna eleifend?
+          </p>
+        </div>
+      </div>
+    </div>
     <!-- footer -->
     <div class="footer">
       <!-- footer subscribe -->
