--- a/index.html
+++ b/index.html
@@ -240,6 +240,85 @@
         </div>
       </div>
     </div>
+
+    <!-- client story -->
+    <div class="client-story">
+      <img
+        src="./assets/images/hand-left.svg"
+        alt="hand-left"
+        class="hand-left"
+      />
+      <div class="story-main">
+        <div class="story-main-user">
+          <img
+            src="./assets/images/user-profile.svg"
+            alt="user-profile"
+            class="user-image"
+          />
+          <h3 class="user-name">Sara Workman</h3>
+          <p class="user-role">CEO at Valid</p>
+          <p class="user-text">
+            "Since I started using this fintech app, managing my finances has
+            become so much easier. I can track my spending,set savings goals,
+            and even invest all in one place."
+          </p>
+        </div>
+
+        <div class="story-main-nav">
+          <div class="nav-user"></div>
+          <div class="nav-user"></div>
+          <div class="nav-user"></div>
+        </div>
+      </div>
+      <img
+        src="./assets/images/hand-right.svg"
+        alt="hand-right"
+        class="hand-right"
+      />
+    </div>
+
+    <!-- download -->
+    <div class="download">
+      <div class="download-text">
+        <h2 class="text-title">
+          Facilitate Accessible <br />
+          Financial Services
+        </h2>
+        <p class="text-description">
+          E-wallet that facilities financial transaction <br />sanytime and
+          anywhere with just a mobile device.
+        </p>
+        <p class="text-additional">
+          <i class="fa-solid fa-circle-check"></i> Financial transacrion become
+          easier
+        </p>
+        <p class="text-additional">
+          <i class="fa-solid fa-circle-check"></i> Better funding access
+        </p>
+        <p class="text-additional">
+          <i class="fa-solid fa-circle-check"></i> Supporting financial
+          inclusion
+        </p>
+        <div class="text-cta">
+          <img
+            src="./assets/images/Fintech-Google-Play.svg"
+            alt="playstore"
+            class="cta-playstore"
+          />
+          <img
+            src="./assets/images/Fintech-App-Store.svg"
+            alt="appstore"
+            class="cta-appstore"
+          />
+        </div>
+      </div>
+      <img
+        src="./assets/images/playstore-hero.svg"
+        alt="download-image"
+        class="download-image"
+      />
+    </div>
+
     <!-- footer -->
     <div class="footer">
       <!-- footer subscribe -->
